--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 :root {
@@ -19,4 +20,9 @@ body {
   border-radius: 20px;
   background-color: var(--secondary-color);
   color: var(--primary-color);
+}
+
+.shadow-effect {
+  border: none;
+  box-shadow: 0 0 33px -10px rgba(71, 114, 254, 0.3);
 }
