--- a/src/app/subscription-form/subscription-form.component.css
+++ b/src/app/subscription-form/subscription-form.component.css
@@ -8,20 +8,20 @@
   display: flex;
 }
 
-input[text],
-input[email] {
-  height: 80px;
+input[type="text"],
+input[type="email"] {
+  height: 60px;
   padding-left: 20px;
   font-size: 13px;
   width: 100%;
 }
 
-.form-control {
+/* .form-control {
   width: 50%;
-}
+} */
 
 .btn-sub {
-  height: 40px;
+  height: 58px;
   width: 150px;
   border: none;
   font-size: 13px;
