--- a/src/app/subscription-form/subscription-form.component.html
+++ b/src/app/subscription-form/subscription-form.component.html
@@ -2,13 +2,13 @@
   <div class="card-body">
     <div class="text-center mt-3 mb-5">
       <h3>SUBSCRIPTION FORM</h3>
-      <p class="m-auto subs-text mb-2">
+      <p class="m-auto subs-text">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam quos
         fugit neque quis sunt dolores sapiente corporis cumque repellendus
         officia.
       </p>
 
-      <form action="" class="form-inline sub-form mb-5">
+      <form action="" class="form-inline sub-form mb-5 mt-5">
         <div class="form-group col-md-5">
           <input
             type="text"
@@ -16,7 +16,7 @@
             placeholder="Your Name"
           />
         </div>
-        <div class="form-group col-md-5">
+        <div class="form-group col-md-5 ms-3">
           <input
             type="email"
             class="form-control shadow-effect"
