--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,7 @@ body {
   border: none;
   box-shadow: 0 0 33px -10px rgba(71, 114, 254, 0.3);
 }
+
+.bg-theme {
+  background-color: var(--primary-color);
+}
