subscription from, single post, comment form designs

--- a/src/app/pages/single-post/single-post.component.html
+++ b/src/app/pages/single-post/single-post.component.html
@@ -1,1 +1,59 @@
-<p>single-post works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-9">
+      <div class="card shadow-effect">
+        <img
+          src="https://images.pexels.com/photos/19899301/pexels-photo-19899301/free-photo-of-a-bunch-of-white-lanterns-hanging-from-a-tree.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt=""
+          class="card-img-top img-fluid"
+        />
+
+        <div class="card-body">
+          <small class="bg-light text-danger text-center">Design</small>
+          <small class="bg-light text-success text-center ms-2">Featured</small>
+          <small class="bg-light text-info text-center ms-2"
+            >Views - 100,255</small
+          >
+          <small class="bg-light text-warning text-center ms-2"
+            >LAST UPDATED - SEP 20, 2021</small
+          >
+
+          <h1 class="mt-3 mb-3">
+            HOW TO START A BLOG IN 2021 EDITED NEW CATEGORY
+          </h1>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
+            nisi vero eum porro voluptatibus neque! Quos, natus nemo
+            consequuntur tenetur dolor delectus quisquam laborum, sunt dolores
+            laboriosam accusamus sit soluta amet enim accusantium hic. Error a
+            voluptas itaque maxime cupiditate, repellat necessitatibus, tempore
+            quas sed aperiam deleniti accusantium modi eveniet. Lorem ipsum,
+            dolor sit amet consectetur adipisicing elit. Suscipit corrupti
+            eaque, dolorum, ut facilis nam cumque quibusdam quas voluptatem a
+            architecto qui. Molestiae deleniti id exercitationem libero
+            voluptatem ipsam totam quod possimus praesentium, placeat facere ex
+            velit dolores obcaecati ullam! Fugiat recusandae ut minima? Aut
+            ducimus consectetur quas non! Incidunt? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Eveniet fugiat, quia doloribus dolor
+            fuga libero id nemo, minus blanditiis temporibus facere. Nulla,
+            veniam. Aut consequuntur eveniet doloribus omnis autem ipsam
+            corporis, aliquam quam ipsum voluptate ad fuga ullam, consectetur
+            exercitationem minus quae praesentium totam. Nam facilis maxime
+            voluptates aut cumque inventore voluptatibus aperiam, dolorum
+            exercitationem ipsam perspiciatis, consectetur cum? Quia, voluptates
+            repellat distinctio pariatur sequi ducimus quaerat voluptatum error
+            qui!
+          </p>
+        </div>
+      </div>
+
+      <app-comment-form></app-comment-form>
+      <app-comment-list></app-comment-list>
+    </div>
+    <div class="col-md-3">
+      <app-post-card></app-post-card>
+      <app-post-card></app-post-card>
+      <app-post-card></app-post-card>
+    </div>
+  </div>
+</div>
