--- a/src/styles.css
+++ b/src/styles.css
@@ -30,3 +30,32 @@ body {
 .bg-theme {
   background-color: var(--primary-color);
 }
+
+.bg-secondary-theme {
+  background-color: var(--secondary-color);
+}
+
+.text-theme-primary {
+  color: var(--primary-color);
+}
+
+input[type="text"],
+input[type="email"] {
+  height: 60px;
+  padding-left: 20px;
+  font-size: 13px;
+  width: 100%;
+}
+
+.btn-theme {
+  height: 58px;
+  width: 120px;
+  border: none;
+  font-size: 13px;
+  background-color: var(--primary-color);
+  color: white;
+}
+
+a {
+  text-decoration: none;
+}
