--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,1 +1,54 @@
-<p>about-us works!</p>
+<section class="mt-5">
+  <div class="container mt-5 mb-5 p-5 bg-theme">
+    <h1 class="text-white text-center">About Us</h1>
+
+    <div class="p-5 mt-4 bg-secondary-theme text-theme-primary">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quidem
+        minima neque eius. At et, esse repudiandae hic, magni commodi quas quia
+        earum fugit vero expedita voluptate accusantium quidem praesentium vitae
+        harum, repellendus doloremque voluptates? Fugit inventore illum
+        perferendis animi exercitationem dolorem facilis aspernatur, in expedita
+        perspiciatis quibusdam voluptatibus atque eos amet laborum quae facere.
+        Voluptatibus necessitatibus quibusdam, soluta ab maiores nesciunt
+        officiis, totam minus culpa, nam dolore molestiae consequatur illo?
+        Voluptatibus dolorem facere ducimus quis reprehenderit id, nam, sunt
+        debitis harum magnam cumque laudantium modi? Fugiat veritatis quo atque
+        nemo omnis fuga provident sapiente dignissimos? Rerum quod eaque
+        repellendus.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quidem
+        minima neque eius. At et, esse repudiandae hic, magni commodi quas quia
+        earum fugit vero expedita voluptate accusantium quidem praesentium vitae
+        harum, repellendus doloremque voluptates? Fugit inventore illum
+        perferendis animi exercitationem dolorem facilis aspernatur, in expedita
+        perspiciatis quibusdam voluptatibus atque eos amet laborum quae facere.
+        Voluptatibus necessitatibus quibusdam, soluta ab maiores nesciunt
+        officiis, totam minus culpa, nam dolore molestiae consequatur illo?
+        Voluptatibus dolorem facere ducimus quis reprehenderit id, nam, sunt
+        debitis harum magnam cumque laudantium modi? Fugiat veritatis quo atque
+        nemo omnis fuga provident sapiente dignissimos? Rerum quod eaque
+        repellendus.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quidem
+        minima neque eius. At et, esse repudiandae hic, magni commodi quas quia
+        earum fugit vero expedita voluptate accusantium quidem praesentium vitae
+        harum, repellendus doloremque voluptates? Fugit inventore illum
+        perferendis animi exercitationem dolorem facilis aspernatur, in expedita
+        perspiciatis quibusdam voluptatibus atque eos amet laborum quae facere.
+        Voluptatibus necessitatibus quibusdam, soluta ab maiores nesciunt
+        officiis, totam minus culpa, nam dolore molestiae consequatur illo?
+        Voluptatibus dolorem facere ducimus quis reprehenderit id, nam, sunt
+        debitis harum magnam cumque laudantium modi? Fugiat veritatis quo atque
+        nemo omnis fuga provident sapiente dignissimos? Rerum quod eaque
+        repellendus.
+      </p>
+
+      <div class="text-center">
+        <button class="btn btn-info btn-sm mt-4 btn-theme">Back to Home</button>
+      </div>
+    </div>
+  </div>
+</section>
