single category dynamic

--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -1,4 +1,4 @@
-<div class="card shadow-eefect" *ngIf="postData">
+<div class="card shadow-effect" *ngIf="postData">
   <img [src]="postImgUrl" alt="post-image" class="card-img-top" />
 
   <div class="card-body">
