--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -1,4 +1,8 @@
-<div class="card shadow-effect" *ngIf="postData">
+<div
+  class="card shadow-effect"
+  *ngIf="postData"
+  [routerLink]="['/post', postData.id]"
+>
   <img [src]="postImgUrl" alt="post-image" class="card-img-top" />
 
   <div class="card-body">
