--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -9,7 +9,11 @@
     <small class="bg-light text-danger text-center">{{
       postData.data.category.category
     }}</small>
-    <small class="bg-light text-success text-center ms-3">Featured</small>
+    <small
+      class="bg-light text-success text-center ms-3"
+      *ngIf="postData.data.isFeatured"
+      >Featured</small
+    >
     <small class="bg-light text-info text-center ms-3">{{
       postData.data.views
     }}</small>
