--- a/src/app/subscription-form/subscription-form.component.html
+++ b/src/app/subscription-form/subscription-form.component.html
@@ -8,24 +8,60 @@
         officia.
       </p>
 
-      <form action="" class="form-inline sub-form mb-5 mt-5">
+      <div class="alert alert-danger mt-3" *ngIf="isEmailError">
+        Email is already in use
+      </div>
+
+      <div class="alert alert-success mt-3" *ngIf="isEmailSubmitted">
+        Thank you for subscribing for our newsletters. Stay tuned..!
+      </div>
+
+      <form
+        class="form-inline sub-form mb-5 mt-5"
+        #subForm="ngForm"
+        (ngSubmit)="onSubmit(subForm.value)"
+        *ngIf="!isEmailSubmitted"
+      >
         <div class="form-group col-md-5">
           <input
             type="text"
-            class="form-control shadow-effect"
+            class="form-control"
             placeholder="Your Name"
+            name="name"
+            #Name="ngModel"
+            ngModel
+            required
+            [ngClass]="{ 'is-invalid': Name.touched && Name.invalid }"
           />
+          <div class="text-danger" *ngIf="Name.touched && Name.invalid">
+            <div *ngIf="Name.errors['required']">Name is Required</div>
+          </div>
         </div>
         <div class="form-group col-md-5 ms-3">
           <input
             type="email"
-            class="form-control shadow-effect"
+            class="form-control"
             placeholder="Email Address"
+            name="email"
+            #Email="ngModel"
+            ngModel
+            required
+            email
+            [ngClass]="{ 'is-invalid': Email.touched && Email.invalid }"
           />
+          <div class="text-danger" *ngIf="Email.touched && Email.invalid">
+            <div *ngIf="Email.errors['required']">Email is Required</div>
+            <div *ngIf="Email.errors['email']">Please enter a valid email</div>
+          </div>
         </div>
 
         <div class="col-md-2">
-          <button class="btn btn-info btn-block btn-theme">SUBSCRIBE</button>
+          <button
+            class="btn btn-info btn-block btn-theme"
+            [disabled]="subForm.invalid"
+          >
+            SUBSCRIBE
+          </button>
         </div>
       </form>
     </div>
